Add lab2 report

--- a/src/lab2/analytical_method.ipynb
+++ b/src/lab2/analytical_method.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5*x^2 + 10/3*x*y + 5/12*y^2 - 2/3*x - 4/3*y\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -48,6 +55,7 @@
    "source": [
     "var('x y')\n",
     "H = a*x^2 + b*y^2 + c*x*y + d*x + e*y\n",
+    "print H\n",
     "H.show()"
    ]
   },
@@ -67,31 +75,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Игра, заданная ядром H(x, y), выпукло-вогнутая\n"
+      "Игра, заданная ядром H(x, y), выпукло-вогнутая\n",
+      "Производная Hxx =  -10\n",
+      "Производная Hyy =  5/6\n"
      ]
     }
    ],
    "source": [
-    "d2x = H.differentiate(x, 2)\n",
-    "d2y = H.differentiate(y, 2)\n",
-    "if d2x < 0 and d2y > 0:\n",
+    "Hxx = H.differentiate(x, 2)\n",
+    "Hyy = H.differentiate(y, 2)\n",
+    "if Hxx < 0 and Hyy > 0:\n",
     "    print 'Игра, заданная ядром H(x, y), выпукло-вогнутая'\n",
     "else:\n",
-    "    print 'Игра, заданная ядром H(x, y), не является выпукло-вогнутой'"
+    "    print 'Игра, заданная ядром H(x, y), не является выпукло-вогнутой'\n",
+    "print 'Производная Hxx = ', Hxx\n",
+    "print 'Производная Hyy = ', Hyy  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Производная Hx =  -10*x + 10/3*y - 2/3\n",
+      "Производная Hy =  10/3*x + 5/6*y - 4/3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}-10 \\, x + \\frac{10}{3} \\, y - \\frac{2}{3}</script></html>"
+      ],
+      "text/plain": [
+       "-10*x + 10/3*y - 2/3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\frac{10}{3} \\, x + \\frac{5}{6} \\, y - \\frac{4}{3}</script></html>"
+      ],
+      "text/plain": [
+       "10/3*x + 5/6*y - 4/3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Hx = H.differentiate(x)\n",
+    "Hy = H.differentiate(y)\n",
+    "print 'Производная Hx = ', Hx\n",
+    "print 'Производная Hy = ', Hy\n",
+    "Hx.show()\n",
+    "Hy.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "psi = 1/3*y - 1/15\n",
+      "phi = -4*x + 8/5\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -120,15 +187,25 @@
    "source": [
     "psi = -(c*y + d) / (2*a)\n",
     "phi = -(c*x + e) / (2*b)\n",
+    "print 'psi =', psi\n",
+    "print 'phi =', phi\n",
     "psi.show()\n",
     "phi.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x == (1/5)\n",
+      "y == (4/5)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -158,13 +235,15 @@
     "sol = solve([x == psi, y == phi], x, y)\n",
     "x_sol = sol[0][0]\n",
     "y_sol = sol[0][1]\n",
+    "print x_sol\n",
+    "print y_sol\n",
     "x_sol.show()\n",
     "y_sol.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
